(WIP) Remake UI to match occrp/id-frontend;
* Upgrade jekyll to 3.7.* (mainly for livereload)
* Add jekyll-autoprefixer
* Be gone tachyons!
* Other stuff

TODO:
* Databases
* Responsive layout below full width

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: The Investigative Dashboard
+title: Investigative Dashboard
 email: id@occrp.org
 description: >-
   Investigative Dashboard (ID) is intended to help investigative journalists to
@@ -15,8 +15,16 @@ repository_url: https://github.com/occrp/investigativedashboard.org
 # Build settings
 markdown: kramdown
 
+sass:
+  style: compressed
+
+autoprefixer:
+  browsers:
+    - last 2 versions
+
 plugins:
   - jekyll-seo-tag
+  - jekyll-autoprefixer
 
 exclude:
   - Gemfile
