Update CI config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,8 @@ investigativedashboard-jekyll-production:
         - './bin/jekyll build --destination=/tmp/output/'                 # stuff the dreams are made of
         - '/usr/bin/rsync -avz --delete --delete-excluded --exclude=bin/ --exclude=readme.md /tmp/output/ /output/investigativedashboard/'            # rsync the output files to the output directory, deleting files that have been removed
     only:
-        - production
+        - tags
+    except:
+        - branches
     tags:
         - production
